--- a/lp_fast_task/src/components/layout/Header/style.css
+++ b/lp_fast_task/src/components/layout/Header/style.css
@@ -133,7 +133,7 @@
 
   .ft-nav-menu li a {
     padding: 0;
-    font-family: var(--ft-font-family); Aplica a fonte Poppins
+    font-family: var(--ft-font-family);
     color: var(--ft-color-bg-light); 
   }
 
