--- a/front/fasttask-frontend/src/styles/ProfilePage.css
+++ b/front/fasttask-frontend/src/styles/ProfilePage.css
@@ -172,7 +172,7 @@
   border: 3px solid var(--ft-color-primary);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   flex-shrink: 0;
-  background-image: url('https://placehold.co/90x90/2AB6A5/ffffff?text=FT'); /* Imagem padrão */
+  background-image: url('https://placehold.co/90x90/2AB6A5/ffffff?text=FT'); 
   background-size: cover;
   background-position: center;
 }
@@ -298,7 +298,7 @@
 @media (max-width: 480px) {
   .profile-page-container {
     padding: 1rem;
-    margin: calc(var(--header-height) + 0.5rem) auto 0.5rem; /* Ajuste para telas muito pequenas */
+    margin: calc(var(--header-height) + 0.5rem) auto 0.5rem; 
     gap: 0.8rem;
   }
   .profile-page-container h2 {
